# socialhive

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pipeline_tests.yml
backend/: settings.py  urls.py
socialhive/: conftest.py
socialhive/common/: admin.py  apps.py  dtos.py  exceptions.py  models.py  urls.py
socialhive/common/application/: user.py
socialhive/common/infrastructure/api/: pagination.py  serializers.py  views.py
socialhive/common/infrastructure/db/services/: user.py
socialhive/common/infrastructure/repository/: __init__.py  interfaces.py
socialhive/common/migrations/: 0001_initial.py  0002_historicalhiveuser.py  0003_alter_historicalhiveuser_password_and_more.py  0004_historicalhiveuser_role_hiveuser_role.py  0005_alter_historicalhiveuser_username_and_more.py  0006_alter_historicalhiveuser_password_and_more.py
socialhive/common/tests/: factories.py
socialhive/common/tests/E2E/: test_user_views.py
socialhive/common/tests/application/: test_users.py
socialhive/common/utils/: validators.py
socialhive/feed/: admin.py  apps.py  urls.py
socialhive/feed/application/: post.py
socialhive/feed/domain/: dtos.py  interfaces.py  models.py
socialhive/feed/infrastructure/api/: serializers.py  viewsets.py
socialhive/feed/infrastructure/repository/: service.py
socialhive/feed/migrations/: 0001_initial.py  0002_post_is_active.py  0003_alter_post_url.py  0004_alter_post_content.py  0005_alter_post_image_path.py
(+1 files in other folders)
