[tool.poetry]
name = "socialhive"
version = "0.1.0"
description = ""
authors = ["alejandro-ib <alejo1ibarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg = "^3.1.9"
django-simple-history = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
